--- a/img.html
+++ b/img.html
@@ -14,7 +14,7 @@
         <center>
         <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t1.6435-9/108023497_101832644945952_2138525997174187735_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=e3f864&_nc_ohc=9BcZXdozmUoAX_vWfJ4&_nc_ht=scontent-cdt1-1.xx&oh=816dd9749a7a9ecaf497f95de09a7d1e&oe=60E0A376" width=auto height=auto>
         <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t1.6435-9/107851352_101828268279723_6664605070897553933_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=dxAH6kkQNeAAX_gHJXC&_nc_ht=scontent-cdt1-1.xx&oh=1a3c95e0b1dfb64332abeba9785a2520&oe=60E1D7F5" width=auto height=auto>
-        <h1>Suivez <a href="./main.html">ce lien</a> pour revenir sur la page d'accuile</h1>    
+        <h1>Suivez <a href="./index.html">ce lien</a> pour revenir sur la page d'accuile</h1>    
         
 
         <div id="credits">
