--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             </div>
                 
-            <div =id"zik">   
+            <div id="zik">   
             <figure>
                <figcaption>Listen to the T-Rex:</figcaption>
                  <audio
