--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
             <div id="zik">   
             <figure>
-               <figcaption>Listen to the T-Rex:</figcaption>
+               <figcaption><h3>Listen:<h3></figcaption>
                  <audio
                     controls
                      src="/media/cc0-audio/t-rex-roar.mp3">
