--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                <figcaption><h3>Listen:<h3></figcaption>
                  <audio
                     controls
-                     src="./node-wisaax.mp3" preload>
+                     src="/node-wisaax.mp3" preload>
                     Your browser does not support the
                     <code>audio</code> element.
                 </audio>
