--- a/index.html
+++ b/index.html
@@ -40,14 +40,9 @@
                 
             <div id="zik">   
             <figure>
-               <figcaption><h3>Listen:<h3></figcaption>
-                 <audio
-                    controls
-                     src="/node-wisaax.mp3">
-                    Your browser does not support the
-                    <code>audio</code> element.
-                </audio>
-             </figure>
+                <figcaption><h3>Listen:<h3></figcaption>
+                    <a href="https://soundcloud.com/wisaax/node-wisaax" target="_blank">Soudcloud</a>
+                </figure>
              </div>
             
 
