--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
                 
             <div id="zik">
-                    <a href="https://soundcloud.com/wisaax/node-wisaax" target="_blank">Soudcloud</a>
+                    <a class=link href="https://soundcloud.com/wisaax/node-wisaax" target="_blank">Soudcloud</a>
              </div>
             
 
