--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 
+
+    <style>
+    .link { color: #FF0000; } /* CSS link color */
+    </style>
+
+
     <div id="main">
 
     	<head>
