--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
     <style>
-    .link { color: #000000; } /* CSS link color */
+    .link { color: #FFFFFF; } /* CSS link color */
     </style>
 
 
